# libcdatetime

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libcdatetime-wiki.ini  libcdatetime.ini  libcdatetime.pc.in  libcdatetime.spec.in
.travis/: install.sh  runtests.sh  script.sh
common/: byte_stream.h  common.h  config_borlandc.h  config_msc.h  config_winapi.h  file_stream.h  memory.h  narrow_string.h  system_string.h  types.h.in  wide_string.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libcdatetime.h.in
include/libcdatetime/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libcdatetime/: Makefile.am  libcdatetime.c  libcdatetime.rc.in  libcdatetime_definitions.h.in  libcdatetime_elements.c  libcdatetime_elements.h  libcdatetime_error.c  libcdatetime_error.h  libcdatetime_extern.h  libcdatetime_libcerror.h  libcdatetime_libcstring.h  libcdatetime_narrow_split_string.c  libcdatetime_narrow_split_string.h  libcdatetime_narrow_string.c  libcdatetime_narrow_string.h  libcdatetime_support.c  libcdatetime_support.h  libcdatetime_timestamp.c  libcdatetime_timestamp.h  libcdatetime_types.h  libcdatetime_unused.h  libcdatetime_wide_split_string.c  libcdatetime_wide_split_string.h  libcdatetime_wide_string.c  libcdatetime_wide_string.h  libcsystem_date_time.c  libcsystem_date_time.h  libewf_date_time_values.c
manuals/: Makefile.am  libcdatetime.3
msvscpp/: Makefile.am  libcdatetime.sln
msvscpp/cdatetime_test_elements/: cdatetime_test_elements.vcproj
msvscpp/cdatetime_test_error/: cdatetime_test_error.vcproj
msvscpp/cdatetime_test_get_version/: cdatetime_test_get_version.vcproj
msvscpp/cdatetime_test_support/: cdatetime_test_support.vcproj
msvscpp/cdatetime_test_timestamp/: cdatetime_test_timestamp.vcproj
msvscpp/libcdatetime/: libcdatetime.vcproj
msvscpp/libcdatetime_dll/: libcdatetime_dll.vcproj
tests/: Makefile.am  cdatetime_test_elements.c  cdatetime_test_error.c  cdatetime_test_get_version.c  cdatetime_test_libcdatetime.h  cdatetime_test_libcerror.h  cdatetime_test_libcstring.h  cdatetime_test_macros.h  cdatetime_test_memory.c  cdatetime_test_memory.h  cdatetime_test_support.c  cdatetime_test_timestamp.c  cdatetime_test_unused.h  pkgbuild.sh  runtests.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at
