include_HEADERS = \
	libcdatetime.h

pkginclude_HEADERS = \
	libcdatetime/definitions.h \
	libcdatetime/error.h \
	libcdatetime/extern.h \
	libcdatetime/features.h \
	libcdatetime/types.h

EXTRA_DIST = \
	libcdatetime.h.in \
	libcdatetime/definitions.h.in \
	libcdatetime/features.h.in \
	libcdatetime/types.h.in

DISTCLEANFILES = \
	libcdatetime.h \
	libcdatetime/definitions.h \
	libcdatetime/features.h \
	libcdatetime/types.h \
	Makefile \
	Makefile.in

