MSVSCPP_FILES = \
	cdatetime_test_elements/cdatetime_test_elements.vcproj \
	cdatetime_test_error/cdatetime_test_error.vcproj \
	cdatetime_test_get_version/cdatetime_test_get_version.vcproj \
	cdatetime_test_timestamp/cdatetime_test_timestamp.vcproj \
	libcdatetime/libcdatetime.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libcdatetime.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

