MSVSCPP_FILES = \
	cdatetime_test_elements/cdatetime_test_elements.vcproj \
	cdatetime_test_error/cdatetime_test_error.vcproj \
	cdatetime_test_support/cdatetime_test_support.vcproj \
	cdatetime_test_timestamp/cdatetime_test_timestamp.vcproj \
	libcdatetime/libcdatetime.vcproj \
	libcerror/libcerror.vcproj \
	libcdatetime.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

